--- a/index.html
+++ b/index.html
@@ -437,41 +437,76 @@
         </div>
       </section>
       <!-- Clients -->
-      <section>
-        <h2>What Clients Say</h2>
-        <p>
-          Problems trying to resolve the conflict between the two major realms
-          of Classical physics: Newtonian mechanics
-        </p>
-        <ul>
-          <li>
-            <p>
-              Product helps you see how many more days you need to work to reach
-              your financial goal.
-            </p>
-            <img src="./images/Ellipse1.png" alt="women" width="50" />
-            <h3>Wahid Ari</h3>
-            <p>Designer</p>
-          </li>
-          <li>
-            <p>
-              Product helps you see how many more days you need to work to reach
-              your financial goal.
-            </p>
-            <img src="./images/Ellipse2.png" alt="men" width="50" />
-            <h3>Wahid Ari</h3>
-            <p>Designer</p>
-          </li>
-          <li>
-            <p>
-              Product helps you see how many more days you need to work to reach
-              your financial goal.
-            </p>
-            <img src="./images/Ellipse3.png" alt="men" width="50" />
-            <h3>Wahid Ari</h3>
-            <p>Designer</p>
-          </li>
-        </ul>
+      <section class="section clients-section">
+        <div class="container">
+          <h2 class="section-title">What Clients Say</h2>
+          <p class="section-text">
+            Problems trying to resolve the conflict between<br />
+            the two major realms of Classical physics: Newtonian mechanics
+          </p>
+          <ul class="clients-list">
+            <li class="clients-card">
+              <p class="text-card-clients">
+                Product helps you see how many more days you need to work to
+                reach your financial goal.
+              </p>
+              <div class="wrap-clients">
+                <div class="wrap-card-image">
+                  <img
+                    class="clients-image"
+                    src="./images/ellipse1.png"
+                    alt="women"
+                    width="50"
+                  />
+                </div>
+                <div class="wrap-clients-title-text">
+                  <h3 class="clients-card-title">Wahid Ari</h3>
+                  <p class="clients-card-text">Designer</p>
+                </div>
+              </div>
+            </li>
+            <li class="clients-card">
+              <p class="text-card-clients">
+                Product helps you see how many more days you need to work to
+                reach your financial goal.
+              </p>
+              <div class="wrap-clients">
+                <div class="wrap-card-image">
+                  <img
+                    class="clients-image"
+                    src="./images/ellipse2.png"
+                    alt="men"
+                    width="50"
+                  />
+                </div>
+                <div class="wrap-clients-title-text">
+                  <h3 class="clients-card-title">Wahid Ari</h3>
+                  <p class="clients-card-text">Designer</p>
+                </div>
+              </div>
+            </li>
+            <li class="clients-card">
+              <p class="text-card-clients">
+                Product helps you see how many more days you need to work to
+                reach your financial goal.
+              </p>
+              <div class="wrap-clients">
+                <div class="wrap-card-image">
+                  <img
+                    class="clients-image"
+                    src="./images/ellipse3.png"
+                    alt="men"
+                    width="50"
+                  />
+                </div>
+                <div class="wrap-clients-title-text">
+                  <h3 class="clients-card-title">Wahid Ari</h3>
+                  <p class="clients-card-text">Designer</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- promo -->
       <section>
