--- a/index.html
+++ b/index.html
@@ -509,36 +509,127 @@
         </div>
       </section>
       <!-- promo -->
-      <section>
-        <h2 hidden>Promo</h2>
-        <p>Join 100 Compannies who boost their business with Product</p>
-        <button type="button">Get This</button>
-        <img src="./images/screen.png" alt="screen" width="351" />
+      <section class="section promo-section">
+        <div class="container">
+          <h2 class="visually-hidden">Promo</h2>
+          <div class="wrap-promo">
+            <p class="promo-text">
+              Join 100 Compannies who boost their business with Product
+            </p>
+            <button class="promo-btn price-btn accent" type="button">
+              Get This
+            </button>
+          </div>
+          <img
+            src="./images/screen.png"
+            alt="screen"
+            width="351"
+            height="331"
+          />
+        </div>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">
-        <svg class="header-logo" width="40" height="36">
-          <use href="./images/icons.svg#icon-logo"></use>
-        </svg>
-        Product
-      </a>
-      <b>Resource</b>
-      <ul>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">FAQ</a></li>
-      </ul>
-      <b>Legal Stuff</b>
-      <ul>
-        <li><a href="">Disclaimer</a></li>
-        <li><a href="">Financing</a></li>
-        <li><a href="">Privacy Policy</a></li>
-        <li><a href="">Terms of Service</a></li>
-      </ul>
-      <b>knowing you're always on the best energy deal. </b>
-      <p>Made With Love By Figmaland All Right Reserved</p>
+    <footer class="section footer-section">
+      <div class="container">
+        <div class="footer-wrap-container">
+          <div class="wrap-logo-sociale">
+            <a class="link-logo link" href="./index.html"
+              ><svg class="header-logo" width="40" height="36">
+                <use href="./images/icons.svg#icon-logo"></use>
+              </svg>
+              Product</a
+            >
+            <ul class="sociale">
+              <li class="item-icons">
+                <a class="icon-link" href="#">
+                  <svg class="sociale-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item-icons">
+                <a class="icon-link" href="#">
+                  <svg class="sociale-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item-icons">
+                <a class="icon-link" href="#">
+                  <svg class="sociale-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="wrap-title-list">
+            <b class="footer-title">Resource</b>
+            <ul class="footer-list">
+              <li class="footer-card">
+                <a class="footer-link" href="">About Us</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">Blog</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">Contact</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">FAQ</a>
+              </li>
+            </ul>
+          </div>
+          <div class="wrap-title-list footer">
+            <b class="footer-title">Legal Stuff</b>
+            <ul class="footer-list">
+              <li class="footer-card">
+                <a class="footer-link" href="">Disclaimer</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">Financing</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">Privacy Policy</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">Terms of Service</a>
+              </li>
+            </ul>
+          </div>
+          <div class="wrap-title-form-button">
+            <b class="footer-title form"
+              >knowing you're always on<br />
+              the best energy deal.
+            </b>
+            <form class="order-form" id="orderForm">
+              <div class="form-group">
+                <label for="user-tel" class="name-label visually-hidden"
+                  >Enter your phone number</label
+                >
+                <div class="for-input-icon">
+                  <svg class="form-icon" width="18" height="28">
+                    <use href="./images/icons.svg#icon-mobile-screen"></use>
+                  </svg>
+                  <input
+                    type="tel"
+                    class="form-field"
+                    name="contact-tel"
+                    id="user-tel"
+                    placeholder="Enter your phone number"
+                  />
+                </div>
+              </div>
+            </form>
+            <button class="footer-btn hero-btn" type="button">
+              Sign up Now
+            </button>
+          </div>
+        </div>
+        <p class="footer-text">
+          Made With Love By Figmaland All Right Reserved
+        </p>
+      </div>
     </footer>
   </body>
 </html>
