--- a/pricing.html
+++ b/pricing.html
@@ -3,103 +3,127 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Business promotion</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"
-          ><img
-            src="./images/logo.svg"
-            alt="logo"
-            width="40"
-            height="36"
-          />Product</a
-        >
-        <ul>
-          <li><a href="./index.html">Product</a></li>
-          <li><a href="./customers.html">Customers</a></li>
-          <li><a href="./pricing.html">Pricing</a></li>
-          <li><a href="">Resources</a></li>
+    <header class="header section">
+      <div class="container">
+        <nav class="header-nav">
+          <a class="link-logo link" href="./index.html"
+            ><svg class="header-logo" width="40" height="36">
+              <use href="./images/icons.svg#icon-logo"></use>
+            </svg>
+            Product</a
+          >
+          <ul class="header-menu">
+            <li><a class="link current" href="./index.html">Product</a></li>
+            <li><a class="link" href="./customers.html">Customers</a></li>
+            <li><a class="link" href="./pricing.html">Pricing</a></li>
+            <li><a class="link" href="">Resources</a></li>
+          </ul>
+        </nav>
+        <ul class="btn-menu">
+          <li><button class="button-in" type="button">Sign In</button></li>
+          <li><button class="button-up" type="button">Sign Up</button></li>
         </ul>
-      </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
-      </ul>
+      </div>
     </header>
     <main>
       <!-- Price -->
-      <section>
-        <h1>PRICING</h1>
-        <h2>Let’s get some real work done here.</h2>
-        <p>
-          Prodict is your perfect solution for working. Get started now for free
-        </p>
-        <ul>
-          <li>
-            <h3>Free</h3>
-            <p>Brief price description</p>
-            <p>0</p>
-            <span>$</span>
-            <p>Per / month</p>
-            <ul>
-              <li>
-                <p>Only 2 Operators</p>
-              </li>
-              <li>
-                <p>Notifications</p>
-              </li>
-              <li>
-                <p>Landing Pages</p>
-              </li>
-            </ul>
-            <button type="button">Order Now</button>
-          </li>
-          <li>
-            <h3>Standard</h3>
-            <p>Brief price description</p>
-            <p>5</p>
-            <span>$</span>
-            <p>Per / month</p>
-            <ul>
-              <li>
-                <p>5+ Operators</p>
-              </li>
-              <li>
-                <p>Notifications</p>
-              </li>
-              <li>
-                <p>Landing Pages</p>
-              </li>
-            </ul>
-            <button type="button">Order Now</button>
-          </li>
-          <li>
-            <h3>Premium</h3>
-            <p>Brief price description</p>
-            <p>10</p>
-            <span>$</span>
-            <p>Per / month</p>
-            <ul>
-              <li>
-                <p>10+ Operators</p>
-              </li>
-              <li>
-                <p>Notifications</p>
-              </li>
-              <li>
-                <p>Landing Pages</p>
-              </li>
-            </ul>
-            <button type="button">Order Now</button>
-          </li>
-        </ul>
+      <section class="section section-price">
+        <div class="container">
+          <h3 class="section-price-title">PRICING</h3>
+          <h1 class="price-title">Let’s get some real work done here.</h1>
+          <p class="price-text">
+            Prodict is your perfect solution for working. Get started now for
+            free
+          </p>
+          <ul class="price-list">
+            <li class="price-card">
+              <h3 class="price-card-title">Free</h3>
+              <p class="price-card-text">Brief price description</p>
+              <div class="wrap-price">
+                <p class="numeric-text">0</p>
+                <div class="wrap-per-offer">
+                  <span class="symbol">$</span>
+                  <p class="per-text">Per / month</p>
+                </div>
+              </div>
+              <ul class="offers-list">
+                <li class="offers">
+                  <p class="offers-text">Only 2 Operators</p>
+                </li>
+                <li class="offers">
+                  <p class="offers-text">Notifications</p>
+                </li>
+                <li class="offers">
+                  <p class="offers-text">Landing Pages</p>
+                </li>
+              </ul>
+              <button class="price-btn hero-btn" type="button">
+                Order Now
+              </button>
+            </li>
+            <li class="price-card background">
+              <h3 class="price-card-title accent">Standard</h3>
+              <p class="price-card-text accent">Brief price description</p>
+              <div class="wrap-price">
+                <p class="numeric-text accent">5</p>
+                <div class="wrap-per-offer">
+                  <span class="symbol accent">$</span>
+                  <p class="per-text accent">Per / month</p>
+                </div>
+              </div>
+              <ul class="offers-list accent">
+                <li class="offers accent">
+                  <p class="offers-text accent">5+ Operators</p>
+                </li>
+                <li class="offers accent">
+                  <p class="offers-text accent">Notifications</p>
+                </li>
+                <li class="offers accent">
+                  <p class="offers-text accent">Landing Pages</p>
+                </li>
+              </ul>
+              <button class="price-btn accent" type="button">Order Now</button>
+            </li>
+            <li class="price-card">
+              <h3 class="price-card-title">Premium</h3>
+              <p class="price-card-text">Brief price description</p>
+              <div class="wrap-price">
+                <p class="numeric-text">10</p>
+                <div class="wrap-per-offer">
+                  <span class="symbol">$</span>
+                  <p class="per-text">Per / month</p>
+                </div>
+              </div>
+              <ul class="offers-list">
+                <li class="offers">
+                  <p class="offers-text">10+ Operators</p>
+                </li>
+                <li class="offers">
+                  <p class="offers-text">Notifications</p>
+                </li>
+                <li class="offers">
+                  <p class="offers-text">Landing Pages</p>
+                </li>
+              </ul>
+              <button class="price-btn hero-btn" type="button">
+                Order Now
+              </button>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Enterprise -->
       <section>
-        <h2>ENTERPRISE</h2>
-        <h3>Are you interested in a custom-tailored plan?</h3>
+        <h3>ENTERPRISE</h3>
+        <h2>Are you interested in a custom-tailored plan?</h2>
         <p>
           Product is a set of advanced features for really large teams with
           projects.
@@ -155,38 +179,127 @@
         </ul>
       </section>
       <!-- promo -->
-      <section>
-        <h2 hidden>Promo</h2>
-        <p>Join 100 Compannies who boost their business with Product</p>
-        <button type="button">Get This</button>
-        <img src="./images/screen.png" alt="screen" width="351" />
+      <section class="section promo-section">
+        <div class="container">
+          <h2 class="visually-hidden">Promo</h2>
+          <div class="wrap-promo">
+            <p class="promo-text">
+              Join 100 Compannies who boost their business with Product
+            </p>
+            <button class="promo-btn price-btn accent" type="button">
+              Get This
+            </button>
+          </div>
+          <img
+            src="./images/screen.png"
+            alt="screen"
+            width="351"
+            height="331"
+          />
+        </div>
       </section>
     </main>
-    <footer>
-      <a href="./index.html"
-        ><img
-          src="./images/logo.svg"
-          alt="logo"
-          width="40"
-          height="36"
-        />Product</a
-      >
-      <b>Resource</b>
-      <ul>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">FAQ</a></li>
-      </ul>
-      <b>Legal Stuff</b>
-      <ul>
-        <li><a href="">Disclaimer</a></li>
-        <li><a href="">Financing</a></li>
-        <li><a href="">Privacy Policy</a></li>
-        <li><a href="">Terms of Service</a></li>
-      </ul>
-      <b>knowing you're always on the best energy deal. </b>
-      <p>Made With Love By Figmaland All Right Reserved</p>
+    <footer class="section footer-section">
+      <div class="container">
+        <div class="footer-wrap-container">
+          <div class="wrap-logo-sociale">
+            <a class="link-logo link" href="./index.html"
+              ><svg class="header-logo" width="40" height="36">
+                <use href="./images/icons.svg#icon-logo"></use>
+              </svg>
+              Product</a
+            >
+            <ul class="sociale">
+              <li class="item-icons">
+                <a class="icon-link" href="#">
+                  <svg class="sociale-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item-icons">
+                <a class="icon-link" href="#">
+                  <svg class="sociale-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="item-icons">
+                <a class="icon-link" href="#">
+                  <svg class="sociale-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="wrap-title-list">
+            <b class="footer-title">Resource</b>
+            <ul class="footer-list">
+              <li class="footer-card">
+                <a class="footer-link" href="">About Us</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">Blog</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">Contact</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">FAQ</a>
+              </li>
+            </ul>
+          </div>
+          <div class="wrap-title-list footer">
+            <b class="footer-title">Legal Stuff</b>
+            <ul class="footer-list">
+              <li class="footer-card">
+                <a class="footer-link" href="">Disclaimer</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">Financing</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">Privacy Policy</a>
+              </li>
+              <li class="footer-card">
+                <a class="footer-link" href="">Terms of Service</a>
+              </li>
+            </ul>
+          </div>
+          <div class="wrap-title-form-button">
+            <b class="footer-title form"
+              >knowing you're always on<br />
+              the best energy deal.
+            </b>
+            <form class="order-form" id="orderForm">
+              <div class="form-group">
+                <label for="user-tel" class="name-label visually-hidden"
+                  >Enter your phone number</label
+                >
+                <div class="for-input-icon">
+                  <svg class="form-icon" width="18" height="28">
+                    <use href="./images/icons.svg#icon-mobile-screen"></use>
+                  </svg>
+                  <input
+                    type="tel"
+                    class="form-field"
+                    name="contact-tel"
+                    id="user-tel"
+                    placeholder="Enter your phone number"
+                  />
+                </div>
+              </div>
+            </form>
+            <button class="footer-btn hero-btn" type="button">
+              Sign up Now
+            </button>
+          </div>
+        </div>
+        <p class="footer-text">
+          Made With Love By Figmaland All Right Reserved
+        </p>
+      </div>
     </footer>
   </body>
 </html>
